--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
 		"grunt-contrib-htmlmin": "~0.2.0",
 		"grunt-contrib-uglify": "~0.4.0",
 		"grunt-contrib-compress": "~0.8.0",
+		"grunt-ftp-deploy": "~0.1.3",
 		"grunt-contrib-watch": "~0.5.3"
 	},
 	"repository": {
